--- a/static/css/base.css
+++ b/static/css/base.css
@@ -6,15 +6,6 @@
     --bg-menu: hsl(from var(--bg-color) h s calc(l - 47) / 45%);
     --border-color: hsl(from var(--bg-color) h s calc(l + 20));
 
-    --button-color: linear-gradient(119deg, rgba(0, 0, 0, 1) 100%, rgba(251, 218, 36, 1) 100%);
-
-    background: #B1B021;
-
-
-
-    background: linear-gradient(313deg, var(--mute-color) 6.82%, var(--accent-color) 87.42%);
-
-
     --text-color: #fffcea;
     --text-inverse-color: var(--bg-color);
     --text-mute-color: hsl(from var(--bg-color) h s calc(l + 30));
@@ -25,7 +16,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Lancelot", serif;
-    /* font-size: 16px; */
+    font-size: 16px;
     text-decoration: none;
     list-style: none;
     box-shadow: none;
@@ -34,13 +25,22 @@
     overflow-y: visible;
 }
 
+@media (width <=768) {
+    * {
+        scrollbar-width: none;
+    }
+}
+
 html {
     scroll-behavior: smooth;
-    font-size: clamp(14px 14vw 24px);
 }
 
 body {
     background-color: var(--bg-color);
+}
+
+img {
+    overflow: unset;
 }
 
 /* CONTAINER */
@@ -130,13 +130,13 @@ body {
 }
 
 .center {
-    justify-content: center;
-    text-align: center;
+    justify-content: center !important;
+    text-align: center !important;
 }
 
 .center-itens {
-    align-items: center;
-    text-align: center;
+    align-items: center !important;
+    text-align: center !important;
 }
 
 .between {
@@ -166,14 +166,13 @@ body {
 /* TEXT */
 p {
     padding: 0.5em 0;
-    font-size: clamp(0.5rem, 0.4rem + .8vw, 1.3rem);
     color: var(--text-color);
     text-align: left;
     line-height: 1.2em;
 
     & em,
     strong {
-        font-size: 1em;
+        font-size: 1.05em;
     }
 }
 
@@ -181,7 +180,6 @@ img {
     width: 100%;
     display: block;
     height: auto;
-    /* border-radius: 10px; */
 }
 
 h1,
@@ -190,15 +188,14 @@ h3 {
     color: var(--text-color);
     text-align: center;
     justify-self: center;
-    align-self: center;
-    line-height: 105%;
+    line-height: 115%;
     font-weight: 100;
-    /* overflow: hidden; */
 }
 
 h1 {
     font-family: "MonteCarlo", cursive;
-    font-size: clamp(1.5rem, 1.3rem + 2vw, 3rem);
+    font-size: 2rem;
+    ;
 }
 
 h2 {
@@ -213,14 +210,6 @@ h3 {
 .inverse h2,
 .inverse h3 {
     color: var(--text-inverse-color);
-}
-
-h2 {
-    font-size: clamp(1.7rem, 4vw, 1.2rem);
-}
-
-h3 {
-    font-size: clamp(.8rem, 3vw, 1rem);
 }
 
 hr {
@@ -238,26 +227,22 @@ a {
 }
 
 a.button {
+    display: flex;
     position: relative;
-    min-width: 200px;
-    /* height: 150px; */
-    margin-top: 30px;
     padding: 0.6em 3em;
-    align-self: center;
+    justify-self: center;
+    text-align: center;
     border: none;
-    font-size: clamp(0.5rem, 0.5rem + .8vw, 1.3rem);
-    font-weight: 400;
     color: var(--text-inverse-color);
     background: linear-gradient(313deg, var(--mute-color) 6.82%, var(--accent-color) 87.42%);
     border-radius: 7px;
 
     &.mute {
         background: var(--mute-color);
-        /* background-color: var(--mute-color); */
     }
 }
 
-/* CARD  */
+/* CARDS  */
 .cards {
     display: flex;
     justify-content: center;
@@ -265,32 +250,11 @@ a.button {
     width: 100%;
     padding: 25px 0px;
     margin: 30px auto;
-    gap: 40px;
+    gap: 20px;
 
     &.grid {
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(380px, 1fr));
-    }
-}
-
-.cards.grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    text-align: left;
-    padding: 25px 0px;
-}
-
-@media(width <=768px) {
-    .cards.grid {
-        /* padding: 5vw 18vw; */
-        padding: 5vw 2vw;
-        display: flex;
-        flex-direction: column;
-        background-color: transparent;
-
-        & p {
-            text-align: center;
-        }
     }
 }
 
@@ -321,7 +285,6 @@ a.button {
         left: 0;
         width: 100%;
         padding: 30px 15px;
-        /* background-color: var(--bg-header); */
 
         h2 {
             font-size: 2em;
