--- a/static/css/menu.css
+++ b/static/css/menu.css
@@ -47,7 +47,7 @@ nav .logo {
     nav {
         margin-top: 0;
         padding-top: 15px;
-        margin-left: 1.2vw;
+        /* margin-left: 1.2vw; */
         height: 10vh;
         justify-content: space-between;
         align-items: start;
