--- a/themes/nostyle/layouts/partials/info.html
+++ b/themes/nostyle/layouts/partials/info.html
@@ -5,7 +5,7 @@
 
         {{ range $res }}
 
-        <div class="cards grid">
+        <div class="cards info">
 
             <div>
                 <div class="title">
@@ -16,7 +16,7 @@
                     <p>{{ .Content }}</p>
                 </div>
 
-                <a class="button start" href="{{ .Params.link}}" target="_blank" rel="nofollow noopener noreferrer">
+                <a class="button" href="{{ .Params.link}}" target="_blank" rel="nofollow noopener noreferrer">
                     {{ .Params.link_text }}
                 </a>
             </div>
