--- a/themes/nostyle/layouts/partials/dialog.html
+++ b/themes/nostyle/layouts/partials/dialog.html
@@ -1,55 +1,152 @@
 <style>
-  dialog {
+  #dialog {
+    display: none;
+
+    /* } */
+
+    /* .modal-overlay { */
+    position: fixed;
+
+    &.active {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      /* padding: 20vw; */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: transparent;
+    }
+  }
+
+  article {
+    /* padding: 40px; */
+    max-width: 80vw;
+    /* max-height: 80vh; */
+
     padding: 20px;
-    justify-self: center;
-    align-self: center;
-    width: clamp(500px, 70vw, 1000px);
-    /* color: aliceblue; */
+    /* justify-self: center; */
+    /* align-self: center; */
+    /* width: clamp(500px, 70vw, 1000px); */
     background-color: var(--bg-color);
-    z-index: 1000;
-    /* display: none; */
-
     border-radius: 10px;
+    z-index: 1000;
 
-    .show {
+    & .form-control-group {
+      display: flex;
+      justify-content: space-between;
+
+      & div {
+        display: flex;
+        flex-direction: column;
+      }
+    }
+
+    & button.close {
+      display: flex;
+      justify-content: end;
+      width: 100%;
+      color: var(--text-color);
+      background-color: var(--bg-color);
+    }
+
+    & .show {
       display: block;
     }
 
-    header {
-      padding: 0;
-      padding-bottom: 30px;
+    & h1 {
+      font-size: 2.3rem;
+      padding: 0 !important;
     }
 
-    h1 {
-      padding: 0 !important;
+    & p {
+      padding: 0 12%;
+      margin-top: 0.7rem;
+      font-size: 1rem;
+      font-weight: 400;
+      color: var(--text-color);
+      width: 100%;
+      text-align: center;
+    }
+
+    .gift {
+      padding: 0 3vw;
+    }
+
+    & .message h2 {
+      padding-top: 20px;
+      font-family: "Lancelot", serif;
+      font-size: 1.5rem;
+      color: var(--mute-color);
+    }
+
+    & input[type="submit"] {
+      margin-bottom: 0.5em;
+      cursor: pointer;
     }
   }
 </style>
 
-<dialog class="shadow" open>
-  <article>
+<dialog id="dialog" >
+  <article class="shadow">
     <header>
-      <button aria-label="Close" rel="prev"></button>
-      <div class="">
-        <h1 class="">Contato</h1>
-        <p>fale conosco, queremos conhecer você</p>
-      </div>
+      <button class="close" onclick="dialogClose()" aria-label="Close" rel="prev">
+        <span class="fa fa-close"></span>
+      </button>
     </header>
-    <div class="container flex w-100">
-      <div class="w-100">
 
+    {{ $res := where .Site.RegularPages "Params.dialog" true }}
 
-        <form id="contact-form">
-          <label for="user_name">Nome</label>
-          <input type="text" placeholder="Informe seu nome" name="user_name" class="form-control" required>
-          <label for="user_email">Email ou telefone</label>
-          <input type="email" placeholder="Informe seu e-mail ou seu telefone de contato" name="user_email"
-            class="form-control" required>
-          <textarea name="message" class="form-control" rows="3" placeholder="Mensagem" required></textarea>
+    {{ range $res }}
 
-          <input type="submit" value="Enviar Mensagem" class="form-control">
-        </form>
+    <div class="title">
+      <h1> {{ .Title }} </h1>
+    </div>
+    <div class="message">
+      <h2 id="item">Nome do item</h2>
+      <p>
+        {{ .Content }}
+      </p>
+    </div>
+
+    <div class="gift">
+      <div class="container flex w-100">
+        <div class="w-100">
+          <form id="contact-form">
+
+            <div class="form-control-group">
+              <input id="gift_name" name="gift_name" type="hidden">
+              <input id="mp_link" name="mp_link" type="hidden">
+
+              <div>
+                <label for="user_name">Nome</label>
+                <input type="text" placeholder="Informe seu nome aqui" name="user_name" class="form-control" required>
+              </div>
+
+              <div>
+                <label for="user_tel">Seu telefone</label>
+                <input type="tel" placeholder="Informe seu telefone de contato" name="user_tel" class="form-control"
+                  required>
+              </div>
+
+              <div>
+                <label for="user_email">Seu email (opcional) </label>
+                <input type="email" placeholder="Informe seu e-mail" name="user_email" class="form-control">
+              </div>
+            </div>
+
+            <label for="message">Mensagem</label>
+            <textarea name="message" class="form-control" rows="3" placeholder="Envie uma mensagem para os noivos"
+              required></textarea>
+
+            <input type="submit" value="Efetuar o pagamento" class="form-control">
+          </form>
+        </div>
       </div>
     </div>
+    {{ end }}
+
   </article>
 </dialog>
