--- a/themes/nostyle/layouts/404.html
+++ b/themes/nostyle/layouts/404.html
@@ -1,8 +1,11 @@
 {{ define "main" }}
-
-<header>
+<div class="error404">
     <h1>Erro 404</h1>
     <h2>A página requisitada não existe.</h2>
-    <a href="/index.html">Voltar para a página inicial</a>
-</header>
+    <h2>
+        <a href="/index.html">
+            Clique aqui para voltar ao início.
+        </a>
+    </h2>
+</div>
 {{ end }}
