--- a/themes/nostyle/layouts/_default/index.html
+++ b/themes/nostyle/layouts/_default/index.html
@@ -5,7 +5,7 @@
 
 <body id="home">
 
-   {{- partial "menu_bar.html" . -}}
+   {{- partial "menu.html" . -}}
    {{- partial "hero.html" . -}}
    {{- partial "history.html" . -}}
 
@@ -14,6 +14,7 @@
    <div class="content">
       {{- partial "suggest.html" . -}}
       {{- partial "dialog.html" . -}}
+      {{- partial "video.html" . -}}
       {{- partial "footer.html" . -}}
    </div>
 
