--- a/themes/nostyle/layouts/_default/single.html
+++ b/themes/nostyle/layouts/_default/single.html
@@ -3,7 +3,7 @@
 <h1 class="h1">{{ .Title }}</h1>
 
 <main aria-label="Content">
-    <div class="container px-1 py-5">
+    <div class="container">
         <h3>
             {{ .Content }}
         </h3>
