--- a/static/css/forms.css
+++ b/static/css/forms.css
@@ -3,10 +3,6 @@ form {
     flex-direction: column;
     width: 100%;
 
-    /* & * {
-        font-family: Inter, sans-serif;
-    } */
-
     & label {
         font-size: 0.9em;
         color: var(--text-color);
@@ -16,10 +12,10 @@ form {
         height: 2.5rem;
         padding: 0 10px;
         outline: none;
-        border-bottom: solid var(--text-inverse-color) 2px;
+        border-bottom: solid var(--mute-color) 1px;
         margin-bottom: 2em;
         color: var(--text-color);
-        caret-color: var(--base-color);
+        caret-color: var(--text-color);
         background-color: var(--bg-input);
     }
 
@@ -40,19 +36,38 @@ form {
     }
 
     & input:focus {
-        border-bottom: solid var(--base-color) 3px;
+        border-bottom: solid var(--text-color) 1px;
     }
 
     & textarea {
         padding: 10px;
         color: var(--text-color);
         background-color: var(--bg-input);
-        caret-color: var(--base-color);
+        border-left: solid var(--mute-color) 1px;
+        caret-color: var(--text-color);
     }
 
     & textarea:focus {
         outline: none;
-        border-left: solid var(--base-color) 3px;
-        background-color: var(--bg-input-focus);
+        border-left: solid var(--text-color) 1px;
+        /* background-color: var(--text-color); */
+    }
+}
+
+a.button {
+    display: flex;
+    position: relative;
+    padding: 0.6em 3em;
+    justify-self: center;
+    text-align: center;
+    border: none;
+    color: var(--text-inverse-color);
+    font-weight: 600;
+    background: linear-gradient(313deg, var(--mute-color) 6.82%, var(--accent-color) 87.42%);
+    border-radius: 7px;
+    cursor: pointer;
+
+    &.mute {
+        background: var(--btn-mute);
     }
 }
