--- a/static/css/hero.css
+++ b/static/css/hero.css
@@ -41,6 +41,7 @@
     }
 
     & h2 {
+        font-family: "Lancelot", serif;
         font-size: 2.5rem;
         /* font-size: clamp(1rem, 1.5vw + 0.7rem, 4rem); */
         /* line-height: 90%; */
