--- a/themes/nostyle/layouts/partials/menu.html
+++ b/themes/nostyle/layouts/partials/menu.html
@@ -2,10 +2,8 @@
     <nav>
         <ul class="nav-links">
             <li class="logo">
-                <a href="#home">
-                    <img src="{{ $.Site.Params.logotipo | relURL}}" alt="logotipo">
-                    <h3>Luciana e Kaio</h3>
-                </a>
+                <img src="{{ $.Site.Params.logotipo | relURL}}" alt="logotipo">
+                <h3>Luciana e Kaio</h3>
             </li>
 
             <li><a href="#history">Nossa História</a></li>
@@ -13,6 +11,14 @@
             <li><a href="#suggest">Lista de Presentes</a></li>
             <li><a href="#footer">Asista On-line</a></li>
         </ul>
+
+        <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav navbar-right">
+                {{ range .Site.Menus.main }}
+                <li><a href="{{ .URL }}" class="smoothScroll">{{ .Name }}</a></li>
+                {{ end }}
+            </ul>
+        </div>
 
         <button class="bars">
             <span></span>
