--- a/themes/nostyle/layouts/partials/post_list.html
+++ b/themes/nostyle/layouts/partials/post_list.html
@@ -1,30 +1,50 @@
-<div class="row">
+{{- $posts := "" -}}
+{{- $posts = site.RegularPages }}
 
-    {{ range .Paginator.Pages }}
+<section id="suggest">
+    <!-- <header class="voltar"> -->
+    <button class="close" onclick="window.history.go(-1);" aria-label="Back" rel="prev">
+        <span class="fa fa-arrow-left"></span>&nbsp;<span>Voltar</span>
+    </button>
+    <!-- </header> -->
 
-    {{ if not .Params.sugest }}
+    <div class="container col center-itens">
+        <h2 class="suggest">Mais algumas sugestões de Presentes</h2>
+        <p class="center">
+            Apresentamos aqui uma lista mais extensa de opções de presentes,
+            caso você queira nos presentear algo.
+        </p>
+    </div>
 
-    <!-- <div class="col-md-4"> -->
-    <div class="card inverse flex item mb-4 product-wap rounded-0">
-        <div class="card image">
-            <a href="{{ .Permalink }}" class="h3 text-decoration-none">
-                <img class="card-img rounded-0 img-fluid" src="/posts/images/{{ .Params.image }}">
-            </a>
-        </div>
+    <div class="cards suggest">
 
-        <div class="card title">
-            <div class="product-title mb-3">
-                <a href="{{ .Permalink }}" class="h3 text-decoration-none">{{ .Title }}</a>
+        {{- if (gt (len $posts) 0) }}
+        {{- range $post := $posts -}}
+
+        {{ if and .Params.gift (not .Params.suggest) }}
+        <div class="card suggest">
+            <div class="image">
+                <img src="/posts/images/{{ .Params.image }}" alt="{{ .Params.image }}">
             </div>
 
-            {{ if .Params.price }}
-            <p class="text-center text-warning fa-close fw-bolder mb-0">R$ {{ .Params.price }}</p>
-            {{ else }}
-            <p class="text-center mb-0">&nbsp;</p>
+            <div class="title">
+                <h3> {{ .Title }} </h3>
+            </div>
+
+            <div class="message">
+                <p class="center">{{ .Content }}</p>
+            </div>
+
+            <div class="price">
+                <p class="text-warning text-right">R$ {{ .Params.price }}</p>
+            </div>
+
+            {{ if .Params.link }}
+            <a class="button mute" onclick="dialogShow('{{ .Title }}', '{{ .Params.link }}')">Presentear</a>
             {{ end }}
         </div>
+        {{ end }}
+        {{ end }}
+        {{ end }}
     </div>
-    <!-- </div> -->
-    {{ end }}
-    {{ end }}
-</div>
+</section>
