--- a/themes/nostyle/layouts/partials/suggest.html
+++ b/themes/nostyle/layouts/partials/suggest.html
@@ -1,6 +1,6 @@
 <section id="suggest">
     <div class="container col center-itens">
-        <h1 class="suggest">Sugestões de Presentes</h1>
+        <h2 class="suggest">Sugestões de Presentes</h2>
         <p class="center">
             Preparamos uma pequena lista de sugestões de presentes, para facilitar a sua
             vida, caso você queira nos presentear algo.
@@ -19,7 +19,7 @@
             </div>
 
             <div class="title">
-                <h2 class="h2"> {{ .Title }} </h2>
+                <h3> {{ .Title }} </h3>
             </div>
 
             <div class="message">
@@ -29,16 +29,14 @@
             <div class="price">
                 <p class="text-warning text-right">R$ {{ .Params.price }}</p>
             </div>
-            <!-- <a class="button mute lg" href="#suggest">Presentear </a> -->
 
             {{ if .Params.link }}
             <a class="button mute" onclick="dialogShow('{{ .Title }}', '{{ .Params.link }}')">Presentear</a>
             {{ end }}
-
         </div>
-
-        <!-- <a class="button mute" onclick="dialogShow('{{ .Title }}', '{{ .Params.link }}')">Presentear </a> -->
-
         {{ end }}
     </div>
+
+    <a class="button" href="/posts" >Ver mais sugestões de presentes</a>
+    <hr>
 </section>
