--- a/themes/nostyle/layouts/posts/list.html
+++ b/themes/nostyle/layouts/posts/list.html
@@ -3,26 +3,10 @@
 
 {{- partial "head.html" . -}}
 
-<body data-spy="scroll" data-offset="50" data-target=".navbar-collapse">
-
-    {{- partial "menu_bar.html" . -}}
-
-    <div class="container py-5">
-        <div class="row">
-            <!-- Product list -->
-            <div class="col-lg-9">
-
-                {{- partial "post_list.html" . -}}
-
-                <div div="row">
-                    {{ template "_internal/pagination.html" . }}
-                </div>
-            </div>
-        </div>
+<body>
+    <div class="content">
+        {{- partial "post_list.html" . -}}
     </div>
-
-    {{- partial "footer.html" . -}}
-
 </body>
 
 </html>
