--- a/themes/nostyle/layouts/tags/baseof.html
+++ b/themes/nostyle/layouts/tags/baseof.html
@@ -5,7 +5,7 @@
 
 <body data-spy="scroll" data-offset="50" data-target=".navbar-collapse">
 
-    {{- partial "menu_bar.html" . -}}
+    {{- partial "menu.html" . -}}
 
     <section id="posts">
         <div class="container">
